--- a/Assignment1/static/css/main.css
+++ b/Assignment1/static/css/main.css
@@ -1,4 +1,4 @@
-.navigation li {
+/* .navigation li {
     float: left;
 }
 .navigation li a {
@@ -37,7 +37,6 @@
 }
 
 .carousel-container{
-    /* background-color: blue; */
     width: 100%;
     height: 600px;
     align-items: center;
@@ -51,7 +50,7 @@
     width:60%;
     height:60%;
 
-}
+} 
 
 .info{
     display:'flex';
@@ -59,6 +58,22 @@
 }
 .info1 .info2{
     background-color: green;
+}
+*/
+
+.imgcursoral{
+    padding: 1% 20%;
+
+}
+
+.c1{
+    background-color: yellow;
+    padding: 1% 40%
+}
+
+.c2{
+    background-color: yellow;
+    padding: 1% 30%
 }
 
 
