--- a/Assignment1/templates/base.html
+++ b/Assignment1/templates/base.html
@@ -6,24 +6,52 @@
 	<title>{{ the_title }}</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Source+Sans+Pro" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/nav.css') }}"> 
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 
 <body>
 
 <div id="container">
-  <div class="navigation">
-    <nav>
-      <li class="tlinks"><a href="{{ url_for('task_1') }}">Task 1</a></li>
-      <li class="tlinks"><a href="{{ url_for('task_2') }}">Task 2</a></li>
-      <li class="tlinks"><a href="{{ url_for('task_3') }}">Task 3</a></li>
-    </nav>
+  <div class="container-fluid navigation">
+  <nav>
+    <ul>
+      <li>
+        <a href="{{url_for('task_1')}}">Task 1</a>
+      </li>
+      <li>
+        <a href="{{ url_for('task_2')}}">Task 2</a>
+      </li>
+      <li>
+        <a href="{{ url_for('task_3')}}">Task 3</a>
+      </li>
+    </ul>
+    <div class="hamburger">
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+    </div>
+  </nav>
+  <div class="menubar">
+    <ul>
+      <li>
+        <a href="#">Task 1</a>
+      </li>
+      <li>
+        <a href="#">Task 2</a>
+      </li>
+      <li>
+        <a href="#">Task 3</a>
+      </li>
+    </ul>
   </div>
+</div>
   {% block body %}
 
   {% endblock %}
 
 </div>
+<script src="./script.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
