--- a/templates/task_2.html
+++ b/templates/task_2.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block body %}
+<div class="container-fluid">
+  <br>
+  <h2>Customer Table:</h2>
+  <br>
+</div>
 <table class="table table-hover">
     <thead>
       <tr>
