--- a/templates/base.html
+++ b/templates/base.html
@@ -17,13 +17,13 @@
   <div class="container-fluid navigation">
   <nav>
     <ul>
-      <li>
+      <li class="{{ 'active' if request.path == url_for('task_1') else '' }}">
         <a href="{{url_for('task_1')}}">Task 1</a>
       </li>
-      <li>
+      <li class="{{ 'active' if request.path == url_for('task_2') else '' }}">
         <a href="{{ url_for('task_2')}}">Task 2</a>
       </li>
-      <li>
+      <li class="{{ 'active' if request.path == url_for('task_3') else '' }}">
         <a href="{{ url_for('task_3')}}">Task 3</a>
       </li>
     </ul>
@@ -52,6 +52,8 @@
   {% endblock %}
 
 </div>
+
+
 <script src="./script.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
