--- a/templates/task_1.html
+++ b/templates/task_1.html
@@ -28,11 +28,10 @@
   <div class="row">
     <div class='col'>
       <div class="c1">
-        <h3>Products</h3>
+        <h3>Profile</h3>
         <ul>
-            <li>a</li>
-            <li>a</li>
-            <li>a</li>
+            <li>Paide Ashish</li>
+            <li>MAQN0984</li>
         </ul>
       </div>
       
@@ -49,6 +48,7 @@
     </div>
   </div>
 </div>
+
 
    
 
