--- a/templates/task_3.html
+++ b/templates/task_3.html
@@ -2,6 +2,9 @@
 
 
 {% block body %}
+<br>
+<h2>Merge Table:</h2>
+<br>
 <div class="contaniner-fluid ">
 <table class="table table-hover task3table">
     <thead>
@@ -27,3 +30,4 @@
     </body>
     </html>
 {% endblock %}
+
